<resources>
    <string name="app_name">AgriLife</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="policy_name">Policy Name</string>
    <string name="policy_desc">Policy description</string>
    <string name="policy_type">Policy Type</string>
    <string name="premium_starting">Premium Starts from :</string>
    <string name="enter_mobile_n">Enter Mobile Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="title_activity_register_user">RegisterUser</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>